--- a/writing/sections/figures_and_tables_perfect_coverage.Rmd
+++ b/writing/sections/figures_and_tables_perfect_coverage.Rmd
@@ -63,104 +63,6 @@ all_cs_compares <- all_cs_compares %>%
 ```
 
 
-# Figure 1. Abundance-driven vs. observed change
-
-```{r, fig.dim = c(5,3)}
-
-dat <- readd(rn, character_only = T, cache=cache)
-source(here::here("analyses", "fxns", "is_fxns.R"))
-
-dat_obs <- pull_focal_years(dat)
-dat_null <- relabund_null_model(dat_obs)
-
-dat_isd_obs <- simulate_isd_ts(dat_obs, isd_seed = 1989)
-dat_isd_null <- simulate_isd_ts(dat_null, isd_seed = 1989)
-
-years <- unique(dat_obs$covariates$year)
-
-begin_years <- years[1:5]
-end_years <- years[(length(years) - 4):length(years)]
-
-begin_isd_real <- filter(dat_isd_obs$isd, year %in% begin_years)
-end_isd_real <- filter(dat_isd_obs$isd, year %in% end_years )
-
-begin_isd_sim <- filter(dat_isd_null$isd, year %in% begin_years)
-end_isd_sim <- filter(dat_isd_null$isd, year %in% end_years)
-
-begin_isd_gmm_real <- add_gmm(begin_isd_real) %>%
-  mutate(time = "begin")
-end_isd_gmm_real <- add_gmm(end_isd_real) %>%
-  mutate(time = "end")
-
-real_gmms <- bind_rows(begin_isd_gmm_real, end_isd_gmm_real) %>%
-  mutate(Dynamics = "Observed")
-
-begin_isd_gmm_sim <- add_gmm(begin_isd_sim) %>%
-  mutate(time = "begin")
-end_isd_gmm_sim <- add_gmm(end_isd_sim)  %>%
-  mutate(time = "end")
-sim_gmms <- bind_rows(begin_isd_gmm_sim, end_isd_gmm_sim) %>%
-  mutate(Dynamics = "Abundance driven")
-
-both_gmms <- bind_rows(real_gmms, sim_gmms)
-```
-
-```{r}
-isd_plots <- ggplot(filter(both_gmms, exp(mass) > 5, exp(mass) < 5000), aes(exp(mass), density, color = Dynamics, linetype = time)) + 
-  geom_line() + 
-  facet_wrap(vars(Dynamics), ncol = 2, scales = "free_y") + 
-  theme(legend.position = "bottom") + 
-  scale_color_viridis_d(option = "cividis",begin = .2,  end = .8) + 
-  ylab("Probability density")+ 
-  xlab("Mass (g); note log scale") +
-  scale_x_log10()
-
-#isd_plots
-
-```
-
-```{r}
-
-
-
-dat_glm <- glm(total_biomass ~ timeperiod * source, data = dat_dynamics, family= Gamma(link = "log"))
-
-dat_lm <- lm(total_biomass ~ timeperiod * source, data = dat_dynamics)
-
-
-dat_dynamics <- dat_dynamics %>%
-  mutate(fitted = predict(dat_glm, type = "response")) %>%
-  mutate(Dynamics = ifelse(source == "sim", "Abundance driven", "Observed")) %>%
-  mutate(time = "begin") 
-
-timeseries_plot <- ggplot(dat_dynamics, aes(timeperiod, total_biomass, color = Dynamics)) +
-  geom_point() + 
-  geom_line() + 
-  geom_line(aes(y = fitted)) + 
-  # geom_rect(aes(xmin = years[1], xmax = years[5], ymin = min(total_biomass), ymax = max(total_biomass), time = "begin"), alpha = 0, color = "black")+ 
-  # geom_rect(data=  mutate(dat_dynamics, time = "end"), aes(xmin = years[length(years) - 4], xmax = years[length(years)], ymin = min(total_biomass), ymax = max(total_biomass),linetype = time), alpha = 0, color = "black")+
-  scale_color_viridis_d(option = "cividis",begin = .2,  end = .8) + 
-  theme(legend.position = "none") +
-  xlab("Year") +
-  ylab("Biomass")
-
-#timeseries_plot
-```
-
-```{r, fig.dim = c(6,4.25)}
-two_plots <- multi_panel_figure(columns = 1 ,height = c(2,2.25), unit = "in") %>%
-  fill_panel(timeseries_plot) %>%
-  fill_panel(isd_plots)
-
-two_plots
-```
-
-#### Figure 1. 
-
-Illustration of abundance-driven (null model) dynamics as compared to observed dynamics (A), and the underlying dynamics of the ISD (B) for a sample route (`r dat_isd_obs$metadata$location$routename`, `r dat_isd_obs$metadata$location$regionname`). **A. Dynamics of total biomass.** The gold points show the true values for total biomass in each year, and the blue points show the values for total biomass simulated from a null model that incorporates change in total abundance, but assumes no change in the size structure, over time. The smooth lines show the predicted values from a Gamma (log-link) linear model of the form `total_biomass ~ year * Dynamics`.  For this route, change in the individual size distribution has decoupled the dynamics of biomass from those that would occur due only to changes in abundance. The slope for abundance-driven dynamics is significantly more negative than for the observed dynamics (interaction term p = 0.0013). **B. Underlying changes in the ISD.** The individual size distributions for the first 5 years (solid lines) and last 5 years (dashed lines) of the timeseries. The x-axis is body size (as mass in grams; note log scale) and the y-axis is probability density from a Gaussian mixture model fit to a vector of simulated individual masses for all individuals observed in the years in questions, standardized to sum to 1. For the abundance-driven (blue) scenario, individuals' species identities (which determine their body size estimates) are re-assigned at random weighte by each species' mean relative abundance throughout the timeseries, resulting in a consistent individual size distribution over time. For the observed (gold) scenario, individuals' body sizes are estimated based actual species abundances at each time step. For this route, species composition has shifted over time and produced different ISDs for the "begin" and "end" time periods. Specifically, the "end" ISD has peaks at larger body sizes (ca. 90g and 500g) not present in the "begin" ISD. This redistribution of density towards larger body sizes results in an overall increase in body size community wide, which partially offsets declines in total biomass from those expected given change in abundance alone. 
-
-\newpage
-
 ```{r process biomass results}
 
 # Select the best-fitting model for each route using AICc (simplest model with an AICc score within two units of the minimum)
@@ -240,7 +142,7 @@ winning_fits_both <- winning_fits %>%
 
 \newpage
 
-# Figure 2. Directions and magnitudes of change.
+# Appendix S1 Figure S1. 
 
 ```{r, fig.dim = c(4,4)}
 
@@ -257,19 +159,17 @@ slope_histograms <- multi_panel_figure(columns = 1, height = c(1.6, 2), unit = "
 slope_histograms
 ```
 
-#### Figure 2. Long-term trends in total biomass and energy use
+#### Appendix S1 Figure S1. Long-term trends in total biomass and energy use.
+Histograms showing the direction and magnitude of long-term trends for the abundance-driven (null-model; left) and observed (right) changes in biomass (A) and energy use (B), for communities with a significant slope and/or interaction term (for biomass, 141/199 routes; for energy use, 137/199 routes; Table 1). Change is summarized as the ratio of the fitted value for the last year in the time series to the fitted value for the first year in the timeseries from the best-fitting model for that community. Values greater than 1 (vertical black line) indicate increases in total energy or biomass over time, and less than 1 indicate decreases. The abundance-driven dynamics (left) reflect the trends fit for the null model, while the observed dynamics (right) reflect trends incorporating both change in total abundance and change in the size structure over time. For communities best-described by syndromes of “coupled trends” or “no directional change”, the “abundance-driven” and “observed” ratios will be the same; for communities with “decoupled trends”, there will be different ratios for or “abundance-driven” and “observed” dynamics.
 
-Histograms showing the direction and magnitude of change over time for the abundance-driven (left) and observed (right) changes in biomass (A) and energy use (B), for communities with a significant slope and/or interaction term (for biomass, 500/739 routes; for energy use, 509/739 routes). Change is summarized as the ratio of the fitted value for the last year in the time series to the fitted value for the first year in the timeseries from the best-fitting model for that community. Values greater than 1 (vertical black line) indicate increases in total energy or biomass over time, and less than 1 indicate decreases. The abundance-driven dynamics (left) reflect the trends fit for the null model, while the observed dynamics (right) reflect trends incorporating both change in total abundance and change in the size structure over time. For communities with no significant interaction term in the best-fitting model, the "abundance-driven" and "observed" ratios will be the same; interaction terms will result in different ratios for "abundance-driven" and "observed" dynamics. 
+Among routes with temporal trends (“coupled trends” or “decoupled trends”), there are qualitatively different continental-wide patterns in abundance-driven and observed dynamics for total biomass and total energy use. 76% of trends in abundance-driven (null model) dynamics for energy use are decreasing, and 72% for biomass (Table 2). For biomass, observed dynamics are balanced evenly between increases (50% of routes) and decreases (50%) - indicating that changes in the size structure produce qualitatively different long-term trends for biomass than would be expected given abundance changes alone. However, trends for energy use (which scales nonlinearly with biomass) are dominated by decreases (69% of routes), more closely mirroring the trends expected given changes in individual abundance alone.
 
-Among routes with temporal trends, there are qualitatively different continental-wide patterns in abundance-driven and observed dynamics for total biomass and total metabolic flux. 70% of trends in abundance-driven dynamics for energy use are decreasing, and 67% for biomass. However, for biomass, observed dynamics are balanced evenly between increases (49% of routes) and decreases (51%) - indicating that changes in the size structure produce qualitatively different long-term trends for biomass than would be expected given abundance changes alone. However, trends for energy use (which scales nonlinearly with biomass) are dominated by decreases (35% of routes), more closely mirroring the trends expected given changes in abundance. 
 
 \newpage
 
-# Tables: Model outcomes
+# Tables
 
-<!-- and directions of trends  -->
-
-### Table 1.
+### Appendix S1 Table S1.
 
 ```{r model outcomes table, results = T}
 
@@ -299,7 +199,7 @@ model_outcomes_table_pretty
 
 Table of the number and proportion of routes whose dynamics for total biomass and total energy use are best-fit by: a model with no temporal trend (intercept-only model, `response ~ 1`); a model with a temporal trend, but no difference in trend between observed and abundance-driven dynamics (`response ~ timeperiod`); or a model with decoupled temporal trends for observed and abundance-driven dynamics (`response ~ timeperiod * dynamics`, where `dynamics` is either observed or abundance-driven/null model). 
 
-For 31-32% of routes, models with trends do not outperform simple intercept-only models. For the remaining routes, in most instances, the dynamics of biomass and energy use exhibit a temporal trend, but with no detectable difference in the temporal trends for abundance-driven and observed dynamics. However, for a substantial minority of routes (20% overall for biomass, or 30% of routes with a temporal trend; 7% overall for energy use, or 10% of routes with a temporal trend), there is a detectable deviation between the trends expected due only to changes in abundance and the observed dynamics. 
+For 31-32% of routes, models with trends do not outperform simple intercept-only models. For the remaining routes, in most instances, the dynamics of biomass and energy use exhibit a temporal trend, but with no detectable difference in the temporal trends for abundance-driven and observed dynamics. However, for a substantial minority of routes (28% overall for biomass; 11% overall for energy use), there is a detectable deviation between the trends expected due only to changes in abundance and the observed dynamics. 
 
 ### Table 2.
 
@@ -341,102 +241,102 @@ slope_winning_fits_pretty
 
 Restricted to the routes exhibiting temporal trends in total biomass and total metabolic flux, the proportion of trends that are increasing (specifically, the ratio of the last fitted value to the first fitted value > 1) for abundance-driven and observed dynamics. Trends that are not increasing are decreasing.
 
-Trends in abundance-driven dynamics are dominated by *declines* (67% of routes for total biomass, and 70% of routes for total energy). Observed dynamics for biomass differ qualitatively from the abundance-driven dynamics; observed trends in biomass are evenly divided between increases and decreases (49% increasing). Observed trends in energy use more closely mirror abundance-driven trends (65% declines).
+Trends in abundance-driven dynamics are dominated by *declines* (72% of routes for total biomass, and 76% of routes for total energy). Observed dynamics for biomass differ qualitatively from the abundance-driven dynamics; observed trends in biomass are evenly divided between increases and decreases (50% increasing). Observed trends in energy use more closely mirror abundance-driven trends (69% declines).
 
 
 \newpage
 
-# Figure 3. Visualizing decoupling
+<!-- # Figure 3. Visualizing decoupling -->
 
-```{r}
+<!-- ```{r} -->
 
-interaction_all_fits <- all_preds_b %>% 
-  # get just the change ratios from the interaction models - regardless of whether the interaction model is the best-fitting model. this is because we want an estimate of the slope, we'll color by model fit in a minute
-  group_by_all() %>% 
-  filter(grepl( "* source",model_formula), model_family == "Gamma") %>%
-  mutate(plus = substr(model_formula, 12,12) == "+") %>% filter(!plus) %>%
-  ungroup() %>%
-  # now join to *winning* formulas to get the best fitting formula
-  left_join(select(winning_fits, matssname, model_formula, modelcomplexity) %>%
-              rename(winning_formula = model_formula)) %>%
-  select(winning_formula, ratio_sim, ratio_real, matssname, modelcomplexity) %>%
-  mutate(currency = "Biomass")
-
-
-interaction_all_fits_energy <- all_preds_e  %>% 
-  # get just the change ratios from the interaction models - regardless of whether the interaction model is the best-fitting model. this is because we want an estimate of the slope, we'll color by model fit in a minute
-  group_by_all() %>% 
-  filter(grepl( "* source",model_formula), model_family == "Gamma") %>%
-  mutate(plus = substr(model_formula, 12,12) == "+") %>% filter(!plus) %>%
-  ungroup() %>%
-  # now join to *winning* formulas to get the best fitting formula
-  left_join(select(winning_fits_energy, matssname, model_formula, modelcomplexity) %>%
-              rename(winning_formula = model_formula)) %>%
-  select(winning_formula, ratio_sim, ratio_real, matssname, modelcomplexity) %>%
-  mutate(currency = "Metabolic flux")
+<!-- interaction_all_fits <- all_preds_b %>%  -->
+<!--   # get just the change ratios from the interaction models - regardless of whether the interaction model is the best-fitting model. this is because we want an estimate of the slope, we'll color by model fit in a minute -->
+<!--   group_by_all() %>%  -->
+<!--   filter(grepl( "* source",model_formula), model_family == "Gamma") %>% -->
+<!--   mutate(plus = substr(model_formula, 12,12) == "+") %>% filter(!plus) %>% -->
+<!--   ungroup() %>% -->
+<!--   # now join to *winning* formulas to get the best fitting formula -->
+<!--   left_join(select(winning_fits, matssname, model_formula, modelcomplexity) %>% -->
+<!--               rename(winning_formula = model_formula)) %>% -->
+<!--   select(winning_formula, ratio_sim, ratio_real, matssname, modelcomplexity) %>% -->
+<!--   mutate(currency = "Biomass") -->
 
 
-all_interaction <- bind_rows(interaction_all_fits, interaction_all_fits_energy) %>%
-  mutate(`Best fitting model` = ifelse(modelcomplexity == 1, "No trend", ifelse(modelcomplexity == 2, "Coupled trend", "Decoupled trends")))
+<!-- interaction_all_fits_energy <- all_preds_e  %>%  -->
+<!--   # get just the change ratios from the interaction models - regardless of whether the interaction model is the best-fitting model. this is because we want an estimate of the slope, we'll color by model fit in a minute -->
+<!--   group_by_all() %>%  -->
+<!--   filter(grepl( "* source",model_formula), model_family == "Gamma") %>% -->
+<!--   mutate(plus = substr(model_formula, 12,12) == "+") %>% filter(!plus) %>% -->
+<!--   ungroup() %>% -->
+<!--   # now join to *winning* formulas to get the best fitting formula -->
+<!--   left_join(select(winning_fits_energy, matssname, model_formula, modelcomplexity) %>% -->
+<!--               rename(winning_formula = model_formula)) %>% -->
+<!--   select(winning_formula, ratio_sim, ratio_real, matssname, modelcomplexity) %>% -->
+<!--   mutate(currency = "Metabolic flux") -->
 
 
-```
+<!-- all_interaction <- bind_rows(interaction_all_fits, interaction_all_fits_energy) %>% -->
+<!--   mutate(`Best fitting model` = ifelse(modelcomplexity == 1, "No trend", ifelse(modelcomplexity == 2, "Coupled trend", "Decoupled trends"))) -->
 
 
-```{r, fig.dim= c(5.5,3)}
-
-decoupling_plot <- ggplot(all_interaction, aes(ratio_sim, ratio_real, color = `Best fitting model`)) + 
-  geom_point(alpha = .5) + 
-  #geom_point(data = filter(all_interaction, winning_formula != "1"), aes(color = winning_formula), alpha = .3) + 
-  scale_y_log10() + 
-  scale_x_log10() + 
-  scale_color_viridis_d(option = "mako", end = .8, direction = -1) + 
-  theme(legend.position = "bottom") + 
-  geom_abline(intercept = 0, slope = 1) + 
- geom_vline(xintercept = 1, linetype = 2) + 
-  geom_hline(yintercept = 1, linetype =2) +
-  xlab("Abundance-driven change \n Ratio of last fitted value to first fitted value") + 
-  ylab("Observed change \n Ratio of last fitted value to first fitted value") +
-  facet_wrap(vars(currency), ncol = 2)
+<!-- ``` -->
 
 
-decoupling_plot
-```
+<!-- ```{r, fig.dim= c(5.5,3)} -->
+
+<!-- decoupling_plot <- ggplot(all_interaction, aes(ratio_sim, ratio_real, color = `Best fitting model`)) +  -->
+<!--   geom_point(alpha = .5) +  -->
+<!--   #geom_point(data = filter(all_interaction, winning_formula != "1"), aes(color = winning_formula), alpha = .3) +  -->
+<!--   scale_y_log10() +  -->
+<!--   scale_x_log10() +  -->
+<!--   scale_color_viridis_d(option = "mako", end = .8, direction = -1) +  -->
+<!--   theme(legend.position = "bottom") +  -->
+<!--   geom_abline(intercept = 0, slope = 1) +  -->
+<!--  geom_vline(xintercept = 1, linetype = 2) +  -->
+<!--   geom_hline(yintercept = 1, linetype =2) + -->
+<!--   xlab("Abundance-driven change \n Ratio of last fitted value to first fitted value") +  -->
+<!--   ylab("Observed change \n Ratio of last fitted value to first fitted value") + -->
+<!--   facet_wrap(vars(currency), ncol = 2) -->
 
 
-#### Figure 3. Decoupling between abundance-driven and observed trends.
-
-Observed change (ratio of last fitted value to first fitted value, y-axis) in total biomass (left) and total metabolic flux (right) compared to the change expected only due to changes in total abundance (ratio of last fitted value to first fitted value, x-axis). Values greater than 1 (dashed horizontal and vertical lines) mark positive (increasing) trends, while values less than 1 are negative trends. Each point marks the fitted values from a Gamma log-link generalized linear model of the form `response ~ year * dynamics` for a given route. This estimates separate long-term slopes for observed and abundance-driven dynamics. Points are colored corresponding to the best-fitting model (intercept-only, or "no trend"; a slope for year but no difference in slopes between observed and abundance-driven dynamics, or "coupled trend", and separate slopes for observed and abundance-driven dynamics, "decoupled trends") for each route. Deviations from the 1:1 line (solid black line) reflect changes in the community size structure that modulate the relationship between total abundance and total biomass or energy use. 
-
-Changes in total biomass and total energy use generally track changes driven by fluctuations in total abundance, with appreciable scatter around the 1:1 line. When this translates into a statistically detectable decoupling between observed and abundance-driven dynamics ("Decoupled trends"), this is usually in the form of abundance-driven change being more negative (a steeper decline or a smaller increase) than observed change in biomass or energy use (a less steep decline or larger increase), resulting in points falling above and to the left of the 1:1 line. This occurs more strongly and frequently for biomass than for metabolic flux.
+<!-- decoupling_plot -->
+<!-- ``` -->
 
 
- \newpage
+<!-- #### Figure 3. Decoupling between abundance-driven and observed trends. -->
+
+<!-- Observed change (ratio of last fitted value to first fitted value, y-axis) in total biomass (left) and total metabolic flux (right) compared to the change expected only due to changes in total abundance (ratio of last fitted value to first fitted value, x-axis). Values greater than 1 (dashed horizontal and vertical lines) mark positive (increasing) trends, while values less than 1 are negative trends. Each point marks the fitted values from a Gamma log-link generalized linear model of the form `response ~ year * dynamics` for a given route. This estimates separate long-term slopes for observed and abundance-driven dynamics. Points are colored corresponding to the best-fitting model (intercept-only, or "no trend"; a slope for year but no difference in slopes between observed and abundance-driven dynamics, or "coupled trend", and separate slopes for observed and abundance-driven dynamics, "decoupled trends") for each route. Deviations from the 1:1 line (solid black line) reflect changes in the community size structure that modulate the relationship between total abundance and total biomass or energy use.  -->
+
+<!-- Changes in total biomass and total energy use generally track changes driven by fluctuations in total abundance, with appreciable scatter around the 1:1 line. When this translates into a statistically detectable decoupling between observed and abundance-driven dynamics ("Decoupled trends"), this is usually in the form of abundance-driven change being more negative (a steeper decline or a smaller increase) than observed change in biomass or energy use (a less steep decline or larger increase), resulting in points falling above and to the left of the 1:1 line. This occurs more strongly and frequently for biomass than for metabolic flux. -->
+
+
+<!--  \newpage -->
  
-# Figure 4. How change in community structure translates into decoupling
+# Appendix S1 Figure S2
 
 ```{r}
 
 
 winning_fits <- winning_fits %>% 
   left_join(all_cs_compares) %>%
-  mutate(`Best fitting model` = ifelse(modelcomplexity == 1, "No trend", ifelse(modelcomplexity == 2, "Coupled trend", "Decoupled trends")))
+  mutate(Syndrome = ifelse(modelcomplexity == 1, "No trend", ifelse(modelcomplexity == 2, "Coupled trend", "Decoupled trends")))
 
 
 winning_fits <- winning_fits %>%
-  mutate(categorical_fit = `Best fitting model`) %>%
+  mutate(categorical_fit = Syndrome) %>%
   mutate(categorical_fit = as.factor(categorical_fit)) %>%
   mutate(abs_log_ratio = abs(log(real_end_mean_mass / real_begin_mean_mass)),
          log_ratio = log(real_end_mean_mass/real_begin_mean_mass)) %>%
   mutate(isd_turnover = 1 - real_overlap)
 
-isd_mean_change_plot <-  ggplot(winning_fits, aes(log_ratio, color = `Best fitting model`, fill= `Best fitting model`)) + 
+isd_mean_change_plot <-  ggplot(winning_fits, aes(abs_log_ratio, color = Syndrome, fill= Syndrome)) + 
   geom_histogram() + 
-  facet_wrap(vars(`Best fitting model`), scales = 'free_y', ncol = 1) +
+  facet_wrap(vars(Syndrome), scales = 'free_y', ncol = 1) +
   scale_color_viridis_d(option = "mako", end = .8, direction = -1) +     
   scale_fill_viridis_d(option = "mako", end = .8, direction = -1) +
   theme(legend.position = "none") +
-  xlab("Mean mass log ratio") +
+  xlab("Mean mass absolute log ratio") +
   ylab("Count") +
   ggtitle("Mean size change")
 # 
@@ -461,9 +361,9 @@ isd_mean_change_plot <-  ggplot(winning_fits, aes(log_ratio, color = `Best fitti
 
 ```{r}
 
-isd_overlap_plot <- ggplot(winning_fits, aes(isd_turnover,color = `Best fitting model`, fill= `Best fitting model`)) + 
+isd_overlap_plot <- ggplot(winning_fits, aes(isd_turnover,color = Syndrome, fill= Syndrome)) + 
   geom_histogram() + 
-  facet_wrap(vars(`Best fitting model`), scales = 'free_y', ncol = 1) +
+  facet_wrap(vars(Syndrome), scales = 'free_y', ncol = 1) +
   scale_color_viridis_d(option = "mako", end = .8, direction = -1) +  scale_fill_viridis_d(option = "mako", end = .8, direction = -1) +
   theme(legend.position = "none") +
   xlab("ISD turnover") +
@@ -473,9 +373,9 @@ isd_overlap_plot <- ggplot(winning_fits, aes(isd_turnover,color = `Best fitting 
 
 
 
-bcd_plot <- ggplot(winning_fits, aes(sp_turnover_bcd,color = `Best fitting model`, fill= `Best fitting model`)) + 
+bcd_plot <- ggplot(winning_fits, aes(sp_turnover_bcd,color = Syndrome, fill= Syndrome)) + 
   geom_histogram() + 
-  facet_wrap(vars(`Best fitting model`), scales = 'free_y', ncol = 1) +
+  facet_wrap(vars(Syndrome), scales = 'free_y', ncol = 1) +
   scale_color_viridis_d(option = "mako", end = .8, direction = -1) +  scale_fill_viridis_d(option = "mako", end = .8, direction = -1) +
   theme(legend.position = "none") +
   xlab("Bray-Curtis index") +
@@ -509,11 +409,11 @@ Routes that exhibit decoupling between observed and abundance-driven changes in 
 
 \newpage
 
-# Statistical comparisons of distributions in Figure 4
+# Statistical comparisons of distributions in Figure S2
 
 ### Mean mass
 
-#### Table 3. ANOVA comparing model type to intercept-only model for absolute log ratio of mean mass
+#### Appendix S1 Table S3. 
 
 ```{r, results = T}
 
